# osvcp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c
concurrency/locked-data-structures/1/: timer.c
concurrency/locked-data-structures/2/: README.md  cloppy_counter_only_global_lock.c
concurrency/locked-data-structures/2/cpu_based/: benchmark_sloppy.py  sloppy_counter_cpu_based.c
concurrency/semaphores/exercise/: fork-join.c  mutex-nostarve.c  reader-writer-nostarve.c
concurrency/semaphores/how-to-implement-semaphores/: Makefile  zemaphore.c  zemaphore.h
concurrency/uncontrolled-scheduling/: output.txt
exersises/concurrency/concurrency-bugs/: .gitignore  vector-avoid-hold-and-wait.c  vector-deadlock.c  vector-global-order.c  vector-try-wait.c
exersises/concurrency/event-based-concurrency/exercise/: .gitignore  API.http  EXPERIMENT.md  Makefile  aio-file-server.c  file-server.c  select-server.c  tcp-time-server.c  test-select-server.sh
exersises/concurrency/event-based-concurrency/exercise/docroot/: hello.txt  pangrams.txt
exersises/concurrency/locked-data-structures/1/: benchmark.py
exersises/concurrency/locked-data-structures/2/: benchmark_sloppy.py  sloppy_counter.c
exersises/concurrency/semaphores/exercise/: barrier.c  reader-writer.c  rendezvous.c
exersises/concurrency/uncontrolled-scheduling/: Makefile  t1.c
exersises/persistence/hard-disk-drive/: README.md  requirements.txt
exersises/vritualization/tlb/exersies/: EXERSES.md
vritualization/swaping/: mem.c
vritualization/tlb/exersies/2/: RESULT.md  tlb.c
(+13 files in other folders)
